custom scss configured
custom scss configured

--- a/src/components/bio-section/BioSection.css
+++ b/src/components/bio-section/BioSection.css
@@ -1,5 +1,5 @@
 .bio-container {
-    background-color: #c9cdcf;
+    background-color: #9fc7db;
     align-items: center;
     object-fit: scale-down;
     justify-content: start;
