--- a/src/components/bio-section/BioSection.css
+++ b/src/components/bio-section/BioSection.css
@@ -1,5 +1,5 @@
 .bio-container {
-    background-color: #9fc7db;
+    background-color: #eeeeee;
     align-items: center;
     object-fit: scale-down;
     justify-content: start;
@@ -21,11 +21,7 @@
 }
 
 .my-pic {
-    width: 70%;
-}
-
-.my-pic-container {
-    align-self: center;
+    width: 75%;
 }
 
 .bio-text {
